# AiNewsRobot

./: .env  Dockerfile  LICENSE  MANIFEST.in  README.md  alembic.ini  requirements.txt  setup.cfg  tox.ini
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: fceeafc25d01_initial_migration.py
src/: main.py
src/ainewsrobot_backed/: AiSumer.py  GetNews.py  GetNews2.py  __init__.py  database.py  main.py  models.py  schemas.py
src/ainewsrobot_backed/routers/: articles.py
src/ainewsrobot_backed/tools/: AiSumer.py  GetNews.py
src/core/: config.py  database.py
src/news_service/: __init__.py  database.py  models.py  schemas.py
src/news_service/routers/: __init__.py  articles.py
src/news_service/utils/: AiSumer.py  GetNews.py  GetNews2.py  __init__.py
src/sql/: db.py
src/user_service/: __init__.py  database.py  models.py  schemas.py
src/user_service/routers/: __init__.py  users.py
src/user_service/templates/email/: reset_password.html  verification.html
src/user_service/utils/: __init__.py  auth.py  email.py
tests/: test_getnews.py  test_user_service.py  test_version.py
