[metadata]
name = ainewsrobot_backed
version = attr: ainewsrobot_backed.__version__
author = xudongmao
author_email = xudongmao666@gmail,com
description = Get a daily summary of ai information
keywords = AiNewsRobot-backed
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11

[options]
python_requires > = 3.11
include_package_data = True
packages = find:
package_dir =
    = src
install_requires =

[options.packages.find]
where = src
exclude =
    tests*
    docs

# https://setuptools.readthedocs.io/en/latest/userguide/entry_point.html
[options.entry_points]

# Packaging project data in module ainewsrobot_backed.
# https://setuptools.readthedocs.io/en/latest/userguide/datafiles.html?highlight=package_data
[options.package_data]

# Copy data for user from project when pip install.
# The relative path is prefix `sys.prefix` . eg: `/usr/local/`.
# Path and data will remove When pip uninstall.
# https://docs.python.org/3/distutils/setupscript.html#installing-additional-files
[options.data_files]

[tool:pytest]
testpaths = tests
python_files = tests.py test_*.py